--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
-    "styled-components": "^5.0.1",
     "node-sass": "npm:dart-sass",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
+  }
 }
